--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,9 @@ name: Release
 on:
   workflow_run:
     workflows: ["Continuous Integration"]
-    branches: [main]
+    push:
+      tags:
+        - "v*.*.*"
     types: 
       - completed
 
@@ -15,4 +17,3 @@ jobs:
         uses: actions/checkout@v2
       - name: Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
