--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,3 +15,4 @@ jobs:
         uses: actions/checkout@v2
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
