--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --workspace --all --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --workspace --all --verbose
 
   clippy:
     name: clippy
